--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -3,21 +3,28 @@
   <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}" role="navigation">
     <div class="container">
       {% if page.permalink != '/' %}
-        <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
+        <a class="navbar-brand title font-weight-lighter nav-title" href="{{ site.baseurl }}/">
+          <span class="nav-title-symbol">&gt;</span>
           {% if site.title == 'blank' %}
             {% if site.first_name %}
-              <span class="font-weight-bold">
+              <span class="font-weight-bold text-uppercase">
                 {{- site.first_name -}}
               </span>
             {% endif %}
             {% if site.middle_name %}
-              {{- site.middle_name -}}
+              <span class="text-uppercase">
+                {{- site.middle_name -}}
+              </span>
             {% endif %}
             {% if site.last_name %}
-              {{- site.last_name -}}
+              <span class="text-uppercase">
+                {{- site.last_name -}}
+              </span>
             {% endif %}
           {% else %}
-            {{- site.title -}}
+            <span class="text-uppercase">
+              {{- site.title -}}
+            </span>
           {% endif %}
         </a>
       {% elsif site.enable_navbar_social %}
