--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -40,6 +40,9 @@ layout: default
 
     <div class="clearfix">{{ content }}</div>
 
+    <!-- Add dotted line separator -->
+    <hr class="dotted-separator">
+
     <!-- News -->
     {% if page.news and site.announcements.enabled %}
       <h2>
@@ -51,7 +54,7 @@ layout: default
     <!-- Latest posts -->
     {% if site.latest_posts.enabled %}
       <h2>
-        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">latest posts</a>
+        <a href="{{ '/blog/' | relative_url }}" style="color: inherit">Latest Posts</a>
       </h2>
       {% include latest_posts.liquid %}
     {% endif %}
