--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -15,9 +15,12 @@ layout: default
 {% assign url_beginning = page.url | slice: 0, 6 %}
 
 <div class="post">
+  {% include breadcrumbs.liquid %}
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-meta">
+      <span class="word-count" style="color: #8e8e8e;"><i class="fa-solid fa-align-left fa-sm"></i> {{ content | number_of_words }} words</span>
+      <br>
       Created in {{ page.date | date: '%B %d, %Y' }}
       {% if page.author %}by {{ page.author }}{% endif %}
       {% if page.last_updated %}, last updated in {{ page.last_updated | date: '%B %d, %Y' }}{% endif %}
@@ -59,6 +62,7 @@ layout: default
         {% endfor %}
       {% endif %}
     </p>
+    <hr class="post-divider">
   </header>
 
   <article class="post-content">
@@ -96,4 +100,37 @@ layout: default
   {% if site.giscus and page.giscus_comments %}
     {% include giscus.liquid %}
   {% endif %}
+
+  <br>
+  <hr class="post-divider">
+  <!-- Add navigation between posts -->
+  <div class="post-navigation">
+    {% assign posts = site.posts | sort: 'date' %}
+    {% assign first_post = posts | first %}
+    {% assign last_post = posts | last %}
+    
+    {% unless page.url == first_post.url %}
+    <a href="{{ page.previous.url | relative_url }}" class="prev-post">
+      <div class="nav-text">
+        <div class="nav-label">PREVIOUS</div>
+        <div class="nav-title">
+          <i class="fas fa-chevron-left"></i>
+          {{ page.previous.title}}
+        </div>
+      </div>
+    </a>
+    {% endunless %}
+    
+    {% unless page.url == last_post.url %}
+    <a href="{{ page.next.url | relative_url }}" class="next-post {% if page.url == first_post.url %}next-post-only{% endif %}">
+      <div class="nav-text">
+        <div class="nav-label">NEXT</div>
+        <div class="nav-title">
+          {{ page.next.title }}
+          <i class="fas fa-chevron-right"></i>
+        </div>
+      </div>
+    </a>
+    {% endunless %}
+  </div>
 </div>
