--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -7,8 +7,7 @@
   rel="stylesheet"
   href="{{ site.third_party_libraries.mdb.url.css }}"
   integrity="{{ site.third_party_libraries.mdb.integrity.css }}"
-  crossorigin="anonymous"
->
+  crossorigin="anonymous">
 
 <!-- Bootstrap Table -->
 {% if page.pretty_table %}
@@ -17,31 +16,34 @@
     rel="stylesheet"
     href="{{ site.third_party_libraries.bootstrap-table.url.css }}"
     integrity="{{ site.third_party_libraries.bootstrap-table.integrity.css }}"
-    crossorigin="anonymous"
-  >
+    crossorigin="anonymous">
 {% endif %}
 
 <!-- Fonts & Icons -->
-<link defer rel="stylesheet" href="{{ '/assets/css/academicons.min.css' | relative_url | bust_file_cache }}">
+<link
+  defer
+  rel="stylesheet"
+  href="{{ '/assets/css/academicons.min.css' | relative_url | bust_file_cache }}">
 <link
   defer
   rel="stylesheet"
   type="text/css"
-  href="{{ site.third_party_libraries.google_fonts.url.fonts }}"
->
+  href="{{ site.third_party_libraries.google_fonts.url.fonts }}">
 
-<!-- Code Syntax Highlighting -->
+  <!-- Code Syntax Highlighting -->
 <link
   defer
   rel="stylesheet"
   href="{{ '/assets/css/jekyll-pygments-themes-github.css' | relative_url | bust_file_cache }}"
   media=""
-  id="highlight_theme_light"
->
+  id="highlight_theme_light">
 
 {% if page.toc and page.toc.sidebar %}
   <!-- Sidebar Table of Contents -->
-  <link defer href="{{ '/assets/css/bootstrap-toc.min.css' | relative_url | bust_file_cache }}" rel="stylesheet">
+  <link
+    defer
+    href="{{ '/assets/css/bootstrap-toc.min.css' | relative_url | bust_file_cache }}"
+    rel="stylesheet">
 {% endif %}
 
 <!-- Styles -->
@@ -53,15 +55,11 @@
     rel="stylesheet"
     href="{{ site.third_party_libraries.pseudocode.url.css }}"
     integrity="{{ site.third_party_libraries.pseudocode.integrity.css }}"
-    crossorigin="anonymous"
-  >
+    crossorigin="anonymous">
 {% endif %}
 
 {% if site.icon.size <= 4 %}
-  <link
-    rel="shortcut icon"
-    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{ site.icon }}</text></svg>"
-  >
+  <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{ site.icon }}</text></svg>">
 {% elsif site.icon != blank %}
   <link rel="shortcut icon" href="{{ site.icon | prepend: '/assets/img/' | relative_url | bust_file_cache}}">
 {% endif %}
@@ -76,8 +74,7 @@
     rel="stylesheet"
     href="{{ '/assets/css/jekyll-pygments-themes-native.css' | relative_url | bust_file_cache }}"
     media="none"
-    id="highlight_theme_dark"
-  >
+    id="highlight_theme_dark">
   <script>
     initTheme();
   </script>
@@ -90,8 +87,7 @@
     rel="stylesheet"
     href="{{ site.third_party_libraries.leaflet.url.css }}"
     integrity="{{ site.third_party_libraries.leaflet.integrity.css }}"
-    crossorigin="anonymous"
-  >
+    crossorigin="anonymous">
 {% endif %}
 
 <!-- diff2html -->
@@ -102,23 +98,20 @@
     href="{{ site.third_party_libraries.highlightjs.url.css.light }}"
     integrity="{{ site.third_party_libraries.highlightjs.integrity.css.light }}"
     crossorigin="anonymous"
-    media="screen and (prefers-color-scheme: light)"
-  >
+    media="screen and (prefers-color-scheme: light)">
   <link
     defer
     rel="stylesheet"
     href="{{ site.third_party_libraries.highlightjs.url.css.dark }}"
     integrity="{{ site.third_party_libraries.highlightjs.integrity.css.dark }}"
     crossorigin="anonymous"
-    media="screen and (prefers-color-scheme: dark)"
-  >
+    media="screen and (prefers-color-scheme: dark)">
   <link
     defer
     rel="stylesheet"
     href="{{ site.third_party_libraries.diff2html.url.css }}"
     integrity="{{ site.third_party_libraries.diff2html.integrity.css }}"
-    crossorigin="anonymous"
-  >
+    crossorigin="anonymous">
 {% endif %}
 
 {% if page.images %}
@@ -129,8 +122,7 @@
       rel="stylesheet"
       href="{{ site.third_party_libraries.img-comparison-slider.url.css }}"
       integrity="{{ site.third_party_libraries.img-comparison-slider.integrity.css }}"
-      crossorigin="anonymous"
-    >
+      crossorigin="anonymous">
   {% endif %}
   <!-- Image slider -->
   {% if page.images.slider %}
@@ -139,27 +131,43 @@
       rel="stylesheet"
       href="{{ site.third_party_libraries.swiper.url.css }}"
       integrity="{{ site.third_party_libraries.swiper.integrity.css }}"
-      crossorigin="anonymous"
-    >
+      crossorigin="anonymous">
   {% endif %}
 {% endif %}
 
 {% if page.tikzjax %}
-  <link defer rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">
+  <link
+    defer
+    rel="stylesheet"
+    type="text/css"
+    href="https://tikzjax.com/v1/fonts.css">
 {% endif %}
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+  rel="preconnect"
+  href="https://fonts.gstatic.com"
+  crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+  rel="preconnect"
+  href="https://fonts.gstatic.com"
+  crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&family=Tiny5&display=swap" rel="stylesheet">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+  rel="preconnect"
+  href="https://fonts.gstatic.com"
+  crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&family=Jersey+25&family=Playwrite+CU:wght@100..400&family=Tiny5&display=swap" rel="stylesheet">
 
 <!-- Add cursor container -->
 <div class="cursor-dot-outline"></div>
 <div class="cursor-dot"></div>
+
+<!-- Add these before the closing </head> tag -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/MorphSVGPlugin.min.js"></script>
