--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -909,8 +909,7 @@ html.transition,
 html.transition *,
 html.transition *:before,
 html.transition *:after {
-  transition: all 750ms !important;
-  transition-delay: 0 !important;
+  transition: none !important;
 }
 
 // Extra Markdown style (post Customization)
@@ -1358,7 +1357,7 @@ ninja-keys::part(ninja-input-wrapper) {
 }
 
 .breadcrumb-nav {
-  margin: 1rem 0 0rem 0;
+  margin: 0 0 0rem 0;
   
   .breadcrumb {
     padding: 0;
@@ -1495,5 +1494,78 @@ ninja-keys::part(ninja-input-wrapper) {
   .next-post-only {
     margin-left: auto; 
   }
+}
+
+// Navigation bar link hover and active states
+.navbar-nav .nav-item {
+  margin: 0 5px;
+
+  .nav-link {
+    position: relative;
+    
+    &:hover::after, 
+    &:active::after,
+    &.active::after { 
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: var(--global-theme-color);
+      bottom: 0;
+      left: 0;
+      transition: width 0.3s ease;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      background-color: var(--global-theme-color);
+      bottom: 0;
+      left: 0;
+      transition: width 0.3s ease;
+    }
+  }
+}
+
+.custom-pagination {
+  .page-item {
+    margin: 0 5px;
+
+    .page-link {
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
+.nav-title-symbol {
+  color: var(--global-theme-color) !important;
+  margin-right: 5px;
+  font-weight: bold;
+}
+
+// Fixed navbar without dynamic padding
+body {
+  padding-top: 58px !important; 
+}
+
+.navbar {
+  position: fixed !important;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+  height: 58px; 
+}
+
+// Disable Bootstrap's dynamic padding behavior
+body.fixed-top-nav {
+  padding-top: 58px !important;
 }
 
