--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -530,15 +530,38 @@ footer.sticky-bottom {
 // Blog
 
 .header-bar {
-  border-bottom: 1px solid var(--global-divider-color);
-  text-align: center;
-  padding-top: 2rem;
-  padding-bottom: 3rem;
+  display: grid;
+  place-items: center;
 
   h1 {
     color: var(--global-theme-color);
-    font-size: 5rem;
+    font-size: 4rem;
   }
+}
+
+.blog-title {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  font-family: monospace;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 0.15em solid var(--global-theme-color);
+  margin: 0 auto;
+  animation: 
+    typing 1s steps(15, end),
+    blink-caret 1s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
 }
 
 .tag-category-list {
@@ -1547,25 +1570,4 @@ ninja-keys::part(ninja-input-wrapper) {
 .nav-title-symbol {
   color: var(--global-theme-color) !important;
   margin-right: 5px;
-  font-weight: bold;
 }
-
-// Fixed navbar without dynamic padding
-body {
-  padding-top: 58px !important; 
-}
-
-.navbar {
-  position: fixed !important;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 1030;
-  height: 58px; 
-}
-
-// Disable Bootstrap's dynamic padding behavior
-body.fixed-top-nav {
-  padding-top: 58px !important;
-}
-
