--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -5,7 +5,7 @@
 @use "sass:color";
 
 :root {
-  --global-bg-color: #F5F5F5;
+  --global-bg-color: #{$white-color};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
@@ -17,7 +17,7 @@
   --global-footer-link-color: #{$blue-color};
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0, 0, 0, 0.1);
-  --global-card-bg-color: #F5F5F5;
+  --global-card-bg-color: #{$white-color};
   --global-highlight-color: #{$red-color-dark};
   --global-back-to-top-bg-color: rgba(
     #{color.channel($black-color, "red", $space: rgb)},
@@ -154,12 +154,4 @@ html[data-theme-setting="light"] {
     padding-top: 12px;
     display: block;
   }
-}
-
-.blog-description {
-  font-family: "Playwrite CU", cursive;
-}
-
-.blog-title {
-  font-weight: bold;
 }
