update post tile design and code wrapper design

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -130,9 +130,13 @@
                 id="search-toggle"
                 title="Search"
                 onclick="openSearchModal()">
-                <span class="nav-link">
-                  <span class="shortcut-key">⌘K</span>
-                  <i class="ti ti-search"></i>
+                <span class="nav-link search-nav-item">
+                  <span class="shortcut-key" style="letter-spacing: 1px;">
+                    <span style="color: #f39304">[
+                    </span>⌘K
+                    <i class="ti ti-search"></i>
+                    <span style="color: #f39304">]</span>
+                  </span>
                 </span>
               </button>
             </li>
