try to solve workflow problem

--- a/_includes/scripts/bootstrap.liquid
+++ b/_includes/scripts/bootstrap.liquid
@@ -4,4 +4,5 @@
 <script
   src="{{ site.third_party_libraries.mdb.url.js }}"
   integrity="{{ site.third_party_libraries.mdb.integrity.js }}"
-  crossorigin="anonymous"></script>
+  crossorigin="anonymous"
+></script>
