--- a/_includes/scripts/search.liquid
+++ b/_includes/scripts/search.liquid
@@ -3,7 +3,8 @@
   <ninja-keys
     hideBreadcrumbs
     noAutoLoadMdIcons
-    placeholder="Type to start searching"></ninja-keys>
+    placeholder="Type to start searching"
+  ></ninja-keys>
   <script>
     let searchTheme = determineComputedTheme();
     const ninjaKeys = document.querySelector('ninja-keys');
