--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -3,7 +3,8 @@
   <nav
     id="navbar"
     class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}"
-    role="navigation">
+    role="navigation"
+  >
     <div class="container">
       {% if page.permalink != '/' %}
         <a class="navbar-brand title font-weight-lighter nav-title" href="{{ site.baseurl }}/">
@@ -44,7 +45,8 @@
         data-target="#navbarNav"
         aria-controls="navbarNav"
         aria-expanded="false"
-        aria-label="Toggle navigation">
+        aria-label="Toggle navigation"
+      >
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar top-bar"></span>
         <span class="icon-bar middle-bar"></span>
@@ -67,7 +69,7 @@
                 <span class="sr-only">(current)</span>
               {% endif %}
             </a>
-        </li>
+          </li>
 
           <!-- Other pages -->
           {% assign sorted_pages = site.pages | sort: 'nav_order' %}
@@ -88,7 +90,8 @@
                     role="button"
                     data-toggle="dropdown"
                     aria-haspopup="true"
-                    aria-expanded="false">
+                    aria-expanded="false"
+                  >
                     {{- p.title }}
                     {% if page.title == p.title or has_active_child %}
                       <span class="sr-only">(current)</span>
@@ -112,7 +115,8 @@
                   {% if p.permalink contains '/blog/' %}
                     {% assign url = '/blog/' %}
                   {% else %}
-                    {% assign url = p.url %}{% endif %}
+                    {% assign url = p.url -%}
+                  {%- endif %}
                   <a class="nav-link" href="{{ url | relative_url }}">
                     {{- p.title }}
                     {% if page.url contains p.url %}
@@ -129,11 +133,11 @@
               <button
                 id="search-toggle"
                 title="Search"
-                onclick="openSearchModal()">
+                onclick="openSearchModal()"
+              >
                 <span class="nav-link search-nav-item">
                   <span class="shortcut-key" style="letter-spacing: 1px;">
-                    <span style="color: #f39304">[
-                    </span>⌘K
+                    <span style="color: #f39304">[ </span>⌘K
                     <i class="ti ti-search"></i>
                     <span style="color: #f39304">]</span>
                   </span>
